Make sure second row is left aligned
when the first item is active is has a border and therefore 2 pixel
greater than the rest, floating will fail
add a "invisible" border to the rest to align the height of all items

--- a/source/stylesheets/components/_sub-indikator.sass
+++ b/source/stylesheets/components/_sub-indikator.sass
@@ -26,6 +26,7 @@
         margin: 0.5em
         background: $light-blue
         border-radius: 0.5em
+        border: 1px solid $light-blue
         &.active
           background: none
           border: 1px dashed $light-blue
